--- a/package.json
+++ b/package.json
@@ -22,10 +22,17 @@
     "babel-preset-es2015-node6": "^0.3.0",
     "babel-register": "^6.14.0",
     "fast-async": "^6.0.32",
+    "hashids": "^1.1.1",
+    "jsonwebtoken": "^7.1.9",
     "koa": "^2.0.0",
     "koa-bodyparser": "^3.2.0",
     "koa-router": "^7.0.1",
-    "koa-send": "^3.2.0"
+    "koa-send": "^3.2.0",
+    "moment": "^2.15.0",
+    "pg": "^6.1.0",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^3.24.3",
+    "uuid": "^2.0.2"
   },
   "devDependencies": {
     "commitizen": "^2.8.6",
