--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon -q src/index.js",
+    "dev": "NODE_ENV=dev nodemon -q src/index.js",
     "lint": "eslint **/*.js",
     "lint:fix": "npm run lint -- --fix",
     "commit": "git cz"
