--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel": "^6.5.2",
     "babel-preset-es2015-node6": "^0.3.0",
     "babel-register": "^6.14.0",
+    "boom": "^4.0.0",
     "fast-async": "^6.0.32",
     "hashids": "^1.1.1",
     "jsonwebtoken": "^7.1.9",
